--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 theme: jekyll-theme-chirpy
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
-# change below value to '/projectname'.
-baseurl: 'https://jerrykim91.github.io/'
+# change below value to '/projectname'. https://jerrykim91.github.io/
+baseurl: ''
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -38,7 +38,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Hyowon Kim
-  email: jerrykim91@gmail.com             # change to your email address
+  email: jerrykim91.pub@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - #https://twitter.com/username      # change to your twitter homepage
