--- a/_config.yml
+++ b/_config.yml
@@ -77,10 +77,10 @@ theme_mode: light # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: 
+img_cdn: # /assets/img/myimg.png
 
 # the avatar on sidebar, support local or CORS resources
-avatar: myimg.png
+avatar: /assets/img/myimg.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
