--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme_mode: light # [light|dark]
 img_cdn: # /assets/img/myimg.png
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/myimg.png
+avatar: assets/img/myimg.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
