--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: JerryKim91                          # the main title
 
 tagline: 정리중   # it will display as the sub-title
 
-description: >-                        # used by seo meta and the atom feed
+description: >-                    # used by seo meta and the atom feed
   요약
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
@@ -80,7 +80,7 @@ theme_mode: light # [light|dark]
 img_cdn: # /assets/img/myimg.png
 
 # the avatar on sidebar, support local or CORS resources
-avatar: assets/img/myimg.png
+avatar: /assets/img/myimg.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
