--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # The Site Configuration
 
 # Import the theme
-remote-theme: jekyll-theme-chirpy
+theme: jekyll-theme-chirpy
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
@@ -31,7 +31,7 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://jerrykim91.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: jerrykim91             # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
