--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
+title:            제리가 자주 사용하는 코드
+longtitle:        jerry가 자주 사용하는 코드
+author:           jerrykim
 email:            jerrykim91.pub@gmail.com
 description: >
-  Build Jekyll site with the GitBook style.
+  좋아하는 직업을 선택하면 평생 하루도 일하지 않아도 된다. 
 
 version:          1.0
 gitbook_version:  3.2.3
