--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
 title:            Jerry's CodeBook!
-longtitle:        CodeBook
+longtitle:        Jerry's CodeBook!
 author:           jerrykim91
 email:            jerrykim91.pub@gmail.com
 description: >
@@ -11,7 +11,7 @@ gitbook_version:  3.2.3
 github_username:  jerrykim91
 
 url:              'https://jerrykim91.github.io' # the base hostname & protocol for your site, e.g. http://example.com
-baseurl:          '/' # the subpath of your site, e.g. /blog
+baseurl:          'https://jerrykim91.github.io/' # the subpath of your site, e.g. /blog
 #'/jekyll-gitbook'
 rss:              RSS
 
