--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ gitbook_version:  3.2.3
 github_username:  jerrykim91
 
 url:              'https://jerrykim91.github.io' # the base hostname & protocol for your site, e.g. http://example.com
-baseurl:          'https://jerrykim91.github.io/' # the subpath of your site, e.g. /blog
+baseurl:          'https://jerrykim91.github.io' # the subpath of your site, e.g. /blog -> 타이틀 링트 그리고 베이스 링크
 #'/jekyll-gitbook'
 rss:              RSS
 
