--- a/_config.yml
+++ b/_config.yml
@@ -57,3 +57,12 @@ utterances:
   theme: github-light
 
 # theme: jekyll-theme-cayman  # 웨 하는지 모름 
+
+
+search                   : true 
+search_full_content      : true
+search_provider          : algolia
+algolia:
+  application_id         : SX0PUH59XX 
+  index_name             : Jerry's CodeBook!
+  search_only_api_key    : 9643fbc699bf629337e56a0bb5ead751
