--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,28 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            Jerry's CodeBook! #Jekyll Gitbook
+longtitle:        Jerry's CodeBook! #Jekyll Gitbook
+author:           jerrykim91 #HE Tao
+email:            jerrykim91.pub@gmail.com #sighingnow@gmail.com
 description: >
-  Build Jekyll site with the GitBook style.
+  This is jerry CodeBook!
+# Build Jekyll site with the GitBook style.
 
 version:          1.0
 gitbook_version:  3.2.3
+github_username:  jerrykim91
 
-url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
+# url:              'https://sighingnow.github.io'
+# baseurl:          '/jekyll-gitbook'
+
+url:              'https://jerrykim91.github.io' # the base hostname & protocol for your site, e.g. http://example.com
+baseurl:          'https://jerrykim91.github.io' # the subpath of your site, e.g. /blog -> 타이틀 링트 그리고 베이스 링크
+
 rss:              RSS
 
 toc:
   enabled: true
   h_min: 1
-  h_max: 3
+  h_max: 2 #3
 
 # markdown render engine.
 markdown:         kramdown
@@ -52,3 +58,10 @@ regenerate:       true
 plugins:
   - jekyll-feed
   - jemoji
+
+
+utterances:
+  enable: true
+  repo: https://jerrykim91.github.io/jerrykim91.github.io
+  issue_term: title
+  theme: github-light
