--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ github_username:  jerrykim91
 # baseurl:          '/jekyll-gitbook'
 
 url:              'https://jerrykim91.github.io' # the base hostname & protocol for your site, e.g. http://example.com
-baseurl:          '/' # the subpath of your site, e.g. /blog -> 타이틀 링트 그리고 베이스 링크
+baseurl:          '/Jerry's_Codebook' # the subpath of your site, e.g. /blog -> 타이틀 링트 그리고 베이스 링크
 rss:              RSS
 
 toc:
@@ -61,6 +61,6 @@ plugins:
 
 utterances:
   enable: true
-  repo: https://jerrykim91.github.io/jerrykim91.github.io
+  repo: https://jerrykim91.github.io/Jerry's_Codebook
   issue_term: title
   theme: github-light
