--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ utterances:
 collections:
   Intro:
     output: true
-    permalink: /:path/
+    permalink: /:collection/:path/
     order:
 
   # Pages:
